Bug 59444 - Fix introspection for send_keys
Summary: Fix introspection for send_keys
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-16 02:20 UTC by Cole Robinson
Modified: 2013-01-16 11:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix introspection for send_keys (1.23 KB, text/plain)
2013-01-16 02:23 UTC, Cole Robinson
Details

Description Cole Robinson 2013-01-16 02:20:15 UTC
The introspected python bindings for send_keys are unusable due to missing
introspection annotations.
Comment 1 Cole Robinson 2013-01-16 02:23:12 UTC
Created attachment 73132 [details]
Fix introspection for send_keys
Comment 2 Marc-Andre Lureau 2013-01-16 11:47:45 UTC
thanks, applied


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.