Fix introspection for send_keys

Without this I can't find a usable way to call this API with the
introspected python bindings.

https://bugs.freedesktop.org/show_bug.cgi?id=59444